feat: add s3 bucket api actions implementations
to stream line how it's done from the control layer
