# packages/functions/cmd/goapi/api/bucket_basics.go
@@ -1,0 +1,181 @@
+package api
+
+import (
+	"bytes"
+	"context"
+	"errors"
+	"fmt"
+	"io"
+	"time"
+
+	"github.com/aws/aws-sdk-go-v2/aws"
+	"github.com/aws/aws-sdk-go-v2/feature/s3/manager"
+	"github.com/aws/aws-sdk-go-v2/service/s3"
+	"github.com/aws/aws-sdk-go-v2/service/s3/types"
+	"github.com/aws/smithy-go"
+)
+
+// BucketBasics encapsulates the Amazon S3 actions used in the AWS SDK examples.
+type BucketBasics struct {
+	S3Client *s3.Client
+}
+
+func (basics BucketBasics) BucketExists(ctx context.Context, bucketName string) (bool, error) {
+	_, err := basics.S3Client.HeadBucket(ctx, &s3.HeadBucketInput{
+		Bucket: aws.String(bucketName),
+	})
+	exists := true
+	if err != nil {
+		var apiError smithy.APIError
+		if errors.As(err, &apiError) {
+			switch apiError.(type) {
+			case *types.NotFound:
+				exists = false
+				err = nil
+			}
+		}
+	}
+	return exists, err
+}
+
+func (basics BucketBasics) UploadFromReader(ctx context.Context, bucketName string, objectKey string, body io.Reader, size int64) error {
+	const largeObjectThreshold = 5 * 1024 * 1024
+	if size >= 0 && size < largeObjectThreshold {
+		_, err := basics.S3Client.PutObject(ctx, &s3.PutObjectInput{
+			Bucket: aws.String(bucketName),
+			Key:    aws.String(objectKey),
+			Body:   body,
+		})
+		if err != nil {
+			return err
+		}
+		return basics.waitForObject(ctx, bucketName, objectKey)
+	}
+
+	var partMiBs int64 = 10
+	uploader := manager.NewUploader(basics.S3Client, func(u *manager.Uploader) {
+		u.PartSize = partMiBs * 1024 * 1024
+	})
+	_, err := uploader.Upload(ctx, &s3.PutObjectInput{
+		Bucket: aws.String(bucketName),
+		Key:    aws.String(objectKey),
+		Body:   body,
+	})
+	if err != nil {
+		return err
+	}
+	return basics.waitForObject(ctx, bucketName, objectKey)
+}
+
+func (basics BucketBasics) UploadLargeObject(ctx context.Context, bucketName string, objectKey string, largeObject []byte) error {
+	largeBuffer := bytes.NewReader(largeObject)
+	var partMiBs int64 = 10
+	uploader := manager.NewUploader(basics.S3Client, func(u *manager.Uploader) {
+		u.PartSize = partMiBs * 1024 * 1024
+	})
+	_, err := uploader.Upload(ctx, &s3.PutObjectInput{
+		Bucket: aws.String(bucketName),
+		Key:    aws.String(objectKey),
+		Body:   largeBuffer,
+	})
+	if err != nil {
+		return err
+	}
+	return basics.waitForObject(ctx, bucketName, objectKey)
+}
+
+func (basics BucketBasics) GetObject(ctx context.Context, bucketName string, objectKey string) (*s3.GetObjectOutput, error) {
+	return basics.S3Client.GetObject(ctx, &s3.GetObjectInput{
+		Bucket: aws.String(bucketName),
+		Key:    aws.String(objectKey),
+	})
+}
+
+func (basics BucketBasics) DownloadLargeObject(ctx context.Context, bucketName string, objectKey string) ([]byte, error) {
+	var partMiBs int64 = 10
+	downloader := manager.NewDownloader(basics.S3Client, func(d *manager.Downloader) {
+		d.PartSize = partMiBs * 1024 * 1024
+	})
+	buffer := manager.NewWriteAtBuffer([]byte{})
+	_, err := downloader.Download(ctx, buffer, &s3.GetObjectInput{
+		Bucket: aws.String(bucketName),
+		Key:    aws.String(objectKey),
+	})
+	return buffer.Bytes(), err
+}
+
+func (basics BucketBasics) CopyObject(ctx context.Context, sourceBucket, destinationBucket, sourceKey, destinationKey string) error {
+	_, err := basics.S3Client.CopyObject(ctx, &s3.CopyObjectInput{
+		Bucket:     aws.String(destinationBucket),
+		CopySource: aws.String(fmt.Sprintf("%v/%v", sourceBucket, sourceKey)),
+		Key:        aws.String(destinationKey),
+	})
+	if err != nil {
+		var notActive *types.ObjectNotInActiveTierError
+		if errors.As(err, &notActive) {
+			return notActive
+		}
+		return err
+	}
+	return basics.waitForObject(ctx, destinationBucket, destinationKey)
+}
+
+func (basics BucketBasics) ListObjects(ctx context.Context, bucketName string) ([]types.Object, error) {
+	var err error
+	var output *s3.ListObjectsV2Output
+	input := &s3.ListObjectsV2Input{
+		Bucket: aws.String(bucketName),
+	}
+	var objects []types.Object
+	objectPaginator := s3.NewListObjectsV2Paginator(basics.S3Client, input)
+	for objectPaginator.HasMorePages() {
+		output, err = objectPaginator.NextPage(ctx)
+		if err != nil {
+			var noBucket *types.NoSuchBucket
+			if errors.As(err, &noBucket) {
+				err = noBucket
+			}
+			break
+		}
+		objects = append(objects, output.Contents...)
+	}
+	return objects, err
+}
+
+func (basics BucketBasics) DeleteObjects(ctx context.Context, bucketName string, objectKeys []string, bypassGovernance bool) error {
+	var objectIds []types.ObjectIdentifier
+	for _, key := range objectKeys {
+		objectIds = append(objectIds, types.ObjectIdentifier{Key: aws.String(key)})
+	}
+	input := &s3.DeleteObjectsInput{
+		Bucket: aws.String(bucketName),
+		Delete: &types.Delete{Objects: objectIds, Quiet: aws.Bool(true)},
+	}
+	if bypassGovernance {
+		input.BypassGovernanceRetention = aws.Bool(true)
+	}
+	output, err := basics.S3Client.DeleteObjects(ctx, input)
+	if err != nil || len(output.Errors) > 0 {
+		if err != nil {
+			var noBucket *types.NoSuchBucket
+			if errors.As(err, &noBucket) {
+				return noBucket
+			}
+			return err
+		}
+		return fmt.Errorf("%s", aws.ToString(output.Errors[0].Message))
+	}
+	for _, delObjs := range output.Deleted {
+		err = s3.NewObjectNotExistsWaiter(basics.S3Client).Wait(
+			ctx, &s3.HeadObjectInput{Bucket: aws.String(bucketName), Key: delObjs.Key}, time.Minute)
+		if err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+func (basics BucketBasics) waitForObject(ctx context.Context, bucketName, objectKey string) error {
+	return s3.NewObjectExistsWaiter(basics.S3Client).Wait(
+		ctx, &s3.HeadObjectInput{Bucket: aws.String(bucketName), Key: aws.String(objectKey)}, time.Minute)
+}
